@@ -11,7 +11,6 @@ Turn simple equations (a = b * c) into GraphViz dot files showing relationships,
 == FEATURES/PROBLEMS:
 
 * Adds one method to Object and several to Numeric (some direct, some by Measurable and Unit.)  If you use units of measure, each unit will appear on Numeric via module Unit.
-* At present, all classes/modules appear at global scope.
 * MathViz produces textual .dot files.  You will need a viewer which supports dot files directly, or Graphviz to convert them to images yourself.
 
 == SYNOPSIS:
@@ -21,7 +20,7 @@ Turn simple equations (a = b * c) into GraphViz dot files showing relationships,
   
   # No units are provided by default.
   # You can also use 1.unit(:m).per.unit(:s) etc.
-  module Units
+  module MathViz::Units
     new_units :m, :s, :kg, :lb, :joule
   end
   
