@@ -6,7 +6,7 @@ shared_examples_for "common combinations" do
   end
 
   it "flags a mismatch" do
-    (@unit + Unit.new(:x)).to_s.should == 'ERROR'
+    (@unit + MathViz::Unit.new(:x)).to_s.should == 'ERROR'
   end
 
   it "adds with same" do
@@ -14,11 +14,11 @@ shared_examples_for "common combinations" do
   end
 
   it "multiplies with nothing" do
-    (@unit * Unit.new).to_s.should == @unit.to_s
+    (@unit * MathViz::Unit.new).to_s.should == @unit.to_s
   end
 
   it "divides with nothing" do
-    (@unit / Unit.new).to_s.should == @unit.to_s
+    (@unit / MathViz::Unit.new).to_s.should == @unit.to_s
   end
 
   it "cancels on division" do
@@ -26,10 +26,10 @@ shared_examples_for "common combinations" do
   end
 end
 
-describe "Unit" do
+describe "MathViz::Unit" do
   context "with no argument" do
     before do
-      @unit = Unit.new
+      @unit = MathViz::Unit.new
     end
 
     it_should_behave_like "common combinations"
@@ -39,25 +39,25 @@ describe "Unit" do
     end
 
     it "multiplies with numerator" do
-      (@unit * Unit.new(:x)).to_s.should == 'x'
+      (@unit * MathViz::Unit.new(:x)).to_s.should == 'x'
     end
 
     it "divides with numerator" do
-      (@unit / Unit.new(:x)).to_s.should == '1/x'
+      (@unit / MathViz::Unit.new(:x)).to_s.should == '1/x'
     end
 
     it "multiplies with denominator" do
-      (@unit * Unit.new(:x => -1)).to_s.should == '1/x'
+      (@unit * MathViz::Unit.new(:x => -1)).to_s.should == '1/x'
     end
 
     it "divides with denominator" do
-      (@unit / Unit.new(:x => -1)).to_s.should == 'x'
+      (@unit / MathViz::Unit.new(:x => -1)).to_s.should == 'x'
     end
   end
 
   context "with a single argument" do
     before do
-      @unit = Unit.new(:s)
+      @unit = MathViz::Unit.new(:s)
     end
 
     it_should_behave_like "common combinations"
@@ -69,7 +69,7 @@ describe "Unit" do
 
   context "with a numerator argument" do
     before do
-      @unit = Unit.new(:s => 1)
+      @unit = MathViz::Unit.new(:s => 1)
     end
 
     it_should_behave_like "common combinations"
@@ -79,29 +79,29 @@ describe "Unit" do
     end
 
     it "multiplies with numerator" do
-      ['s*x', 'x*s'].should include((@unit * Unit.new(:x)).to_s)
+      ['s*x', 'x*s'].should include((@unit * MathViz::Unit.new(:x)).to_s)
     end
 
     it "divides with numerator" do
-      (@unit / Unit.new(:x)).to_s.should == 's/x'
+      (@unit / MathViz::Unit.new(:x)).to_s.should == 's/x'
     end
 
     it "multiplies with denominator" do
-      (@unit * Unit.new(:x => -1)).to_s.should == 's/x'
+      (@unit * MathViz::Unit.new(:x => -1)).to_s.should == 's/x'
     end
 
     it "divides with denominator" do
-      ['s*x', 'x*s'].should include((@unit / Unit.new(:x => -1)).to_s)
+      ['s*x', 'x*s'].should include((@unit / MathViz::Unit.new(:x => -1)).to_s)
     end
 
     it "cancels on multiplication" do
-      (@unit * Unit.new(:s => -1)).to_s.should == ''
+      (@unit * MathViz::Unit.new(:s => -1)).to_s.should == ''
     end
   end
 
   context "with a numerator squared argument" do
     before do
-      @unit = Unit.new(:s => 2)
+      @unit = MathViz::Unit.new(:s => 2)
     end
 
     it_should_behave_like "common combinations"
@@ -111,33 +111,33 @@ describe "Unit" do
     end
 
     it "multiplies with numerator" do
-      ['s*s*x', 'x*s*s'].should include((@unit * Unit.new(:x)).to_s)
+      ['s*s*x', 'x*s*s'].should include((@unit * MathViz::Unit.new(:x)).to_s)
     end
 
     it "divides with numerator" do
-      (@unit / Unit.new(:x)).to_s.should == 's*s/x'
+      (@unit / MathViz::Unit.new(:x)).to_s.should == 's*s/x'
     end
 
     it "multiplies with denominator" do
-      (@unit * Unit.new(:x => -1)).to_s.should == 's*s/x'
+      (@unit * MathViz::Unit.new(:x => -1)).to_s.should == 's*s/x'
     end
 
     it "divides with denominator" do
-      ['s*s*x', 'x*s*s'].should include((@unit / Unit.new(:x => -1)).to_s)
+      ['s*s*x', 'x*s*s'].should include((@unit / MathViz::Unit.new(:x => -1)).to_s)
     end
 
     it "cancels on multiplication" do
-      (@unit * Unit.new(:s => -1)).to_s.should == 's'
+      (@unit * MathViz::Unit.new(:s => -1)).to_s.should == 's'
     end
 
     it "increases on multiplication" do
-      (@unit * Unit.new(:s => 1)).to_s.should == 's*s*s'
+      (@unit * MathViz::Unit.new(:s => 1)).to_s.should == 's*s*s'
     end
   end
 
   context "with a denominator argument" do
     before do
-      @unit = Unit.new(:s => -1)
+      @unit = MathViz::Unit.new(:s => -1)
     end
 
     it_should_behave_like "common combinations"
@@ -147,29 +147,29 @@ describe "Unit" do
     end
 
     it "multiplies with numerator" do
-      ['x/s'].should include((@unit * Unit.new(:x)).to_s)
+      ['x/s'].should include((@unit * MathViz::Unit.new(:x)).to_s)
     end
 
     it "divides with numerator" do
-      ['1/s*x', '1/x*s'].should include((@unit / Unit.new(:x)).to_s)
+      ['1/s*x', '1/x*s'].should include((@unit / MathViz::Unit.new(:x)).to_s)
     end
 
     it "multiplies with denominator" do
-      ['1/s*x', '1/x*s'].should include((@unit * Unit.new(:x => -1)).to_s)
+      ['1/s*x', '1/x*s'].should include((@unit * MathViz::Unit.new(:x => -1)).to_s)
     end
 
     it "divides with denominator" do
-      ['x/s'].should include((@unit / Unit.new(:x => -1)).to_s)
+      ['x/s'].should include((@unit / MathViz::Unit.new(:x => -1)).to_s)
     end
 
     it "cancels on multiplication" do
-      (@unit * Unit.new(:s => 1)).to_s.should == ''
+      (@unit * MathViz::Unit.new(:s => 1)).to_s.should == ''
     end
   end
 
   context "with a complex argument" do
     before do
-      @unit = Unit.new(:V => 1, :A => 1, :h => -1)
+      @unit = MathViz::Unit.new(:V => 1, :A => 1, :h => -1)
     end
 
     it_should_behave_like "common combinations"
@@ -179,11 +179,11 @@ describe "Unit" do
     end
 
     it "cancels on multiplication" do
-      ["V*A", "A*V"].should include((@unit * Unit.new(:h)).to_s)
+      ["V*A", "A*V"].should include((@unit * MathViz::Unit.new(:h)).to_s)
     end
 
     it "cancels on multiplication" do
-      ["V/h"].should include((@unit * Unit.new(:A => -1)).to_s)
+      ["V/h"].should include((@unit * MathViz::Unit.new(:A => -1)).to_s)
     end
   end
 end
